[package]
name = "ferrumsearch"
version = "1.0.0"
edition = "2021"

# Metadata opcional
authors = ["Tu Nombre <tu.email@example.com>"]
description = "Motor de búsqueda de alto rendimiento en Rust con búsqueda difusa, ranking BM25, filtros y autocompletado."
license = "MIT"
repository = "https://github.com/ooriori/ferrumsearch"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.3", features = ["v4"] }
